--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -8,6 +8,22 @@
   --color-light: #fff;
 }
 
+html,
+body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
 img {
   border-radius: 4px;
 }
